# tp-fast-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
